Fix section spacing

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    background-color: #1F2937;
+    background-color: #10151d;
 }
 
 body {
@@ -81,6 +81,7 @@ h2 {
     font-weight: bold;
     color: #1F2937;
     padding: 20px;
+    margin-top: 0;
 }
 
 .content {
